--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -13,8 +13,10 @@
     <p>This is the third paragraph, Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut provident tenetur eum earum quasi, delectus beatae eius minus ex eaque aperiam quibusdam? Officia nobis omnis quibusdam earum dolore pariatur hic?</p>
 
     <p>This is the fourth paragraph, Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum repellendus possimus nostrum laboriosam odio deleniti tempora distinctio, ipsum unde voluptatem quae optio nesciunt velit nisi nobis eveniet dolor voluptatum explicabo..</p>
-    
+    <p>This is the fifth paragraph, Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum repellendus possimus nostrum laboriosam odio deleniti tempora distinctio, ipsum unde voluptatem quae optio nesciunt velit nisi nobis eveniet dolor voluptatum explicabo..</p>
+    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX logo Image">
     </a>
+    
 </body>
 </html>
