--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -17,6 +17,6 @@
     <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX logo Image">
     </a>
-    
+    <p><a href="tweets.html">See My Tweets</a></p>
 </body>
 </html>
