Update index.html and tweets.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -4,6 +4,14 @@
     <title>My First Portfolio</title>
 </head>
 <body>
+    <header>
+        <ul>
+            <li><a href="base_index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+   <main>
+    <article>
     <h1>Main Heading</h1>
     <p>This is the first paragraph of the page. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, officiis impedit! Rem officia laboriosam quidem ducimus ullam consectetur optio expedita error! Error voluptatem quia odio qui dolorem, dolor quae voluptatibus.</p>
 
@@ -17,6 +25,14 @@
     <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX logo Image">
     </a>
+    <aside>
+        <p>placeholder to add comment thread later</p>
+    </aside>
+</article> 
+</main>
+<footer>
+    <p>Made by Tala Abdalla - <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" target="_blank">here</a></p>
+</footer>
     <p><a href="tweets.html">See My Tweets</a></p>
 </body>
 </html>
