--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -4,6 +4,14 @@
     <title>My First Portfolio</title>
 </head>
 <body>
+    <header>
+        <ul>
+            <li><a href="base_index.html">Home</a></li>
+            <li><a href="index.html">Main Page</a></li>
+        </ul>
+    </header>
+    <main>
+        <article>
     <h1>Tweets Page</h1>
     <blockquote class="twitter-tweet" data-lang="en" data-theme="dark">
         <p lang="ar" dir="rtl">هل من عودة تاني ؟😔❤ <a href="https://t.co/LKXBRw4dIH">pic.twitter.com/LKXBRw4dIH</a></p>
@@ -11,6 +19,15 @@
     </blockquote>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-    <p><a href="index.html">Back to Homepage</a></p>
+    <p><a href="base_index.html">Back to Homepage</a></p>
+</article>
+
+<aside>
+    <p>placeholder to add comment thread later</p>
+</aside>
+</main>
+<footer>
+    <p>Made by Tala Abdalla - <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" target="_blank">here</a></p>
+</footer>
 </body>
 </html>
