Add table of learners to index.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -12,7 +12,9 @@
     </header>
    <main>
     <article>
-    <h1>Main Heading</h1>
+        <h1>Welcome to My Portfolio</h1>
+        <p>This is the main page of my portfolio.</p>
+        <h1>Main Heading</h1>
     <p>This is the first paragraph of the page. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, officiis impedit! Rem officia laboriosam quidem ducimus ullam consectetur optio expedita error! Error voluptatem quia odio qui dolorem, dolor quae voluptatibus.</p>
 
     <h2>Subheading Level 2</h2>
@@ -25,14 +27,52 @@
     <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX logo Image">
     </a>
+   <p><a href="tweets.html">See My Tweets</a></p>
+
+   <div id="learners-table">
+    <h2>Table of Learners</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Age</th>
+                <th>Country</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>John</td>
+                <td>25</td>
+                <td>USA</td>
+            </tr>
+            <tr>
+                <td>Emily</td>
+                <td>28</td>
+                <td>Canada</td>
+            </tr>
+            <tr>
+                <td>Michael</td>
+                <td>32</td>
+                <td>Australia</td>
+            </tr>
+            <tr>
+                <td>Sophia</td>
+                <td>21</td>
+                <td>UK</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+</article> 
     <aside>
         <p>placeholder to add comment thread later</p>
     </aside>
-</article> 
+
 </main>
 <footer>
     <p>Made by Tala Abdalla - <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" target="_blank">here</a></p>
 </footer>
-    <p><a href="tweets.html">See My Tweets</a></p>
+    
 </body>
 </html>
